--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -52,10 +52,10 @@
   line-height: 1.3;
   color: #ffffff;
   text-decoration: none;
-  transition-duration: 0.3s;
+  transition: border-bottom-color 0.3s ease-out;
 
   &:hover {
-    text-decoration: underline;
+    border-bottom: 1px solid #ffffff;
   }
 }
 
@@ -92,6 +92,7 @@
   font-size: 15px;
   font-weight: 400;
   color: $dark-grey;
+  outline: none;
 
   &::placeholder {
     font-size: 13px;
@@ -99,11 +100,11 @@
   }
 
   &:focus {
-    border: 2px solid $green;
+    outline: 2px solid $green;
   }
 
-  &:valid {
-    border: 2px solid #1dc04b;
+  &:focus:valid {
+    outline: 2px solid #1dc04b;
     background-image: url("../img/correct.svg");
     background-repeat: no-repeat;
     background-size: 16px 13px;
@@ -111,7 +112,7 @@
   }
 
   &:focus:invalid {
-    border: 2px solid #f97676;
+    outline: 2px solid #f97676;
     background-image: url("../img/incorrect.svg");
     background-repeat: no-repeat;
     background-size: 12px 12px;
@@ -134,6 +135,7 @@
   font-size: 15px;
   font-weight: 400;
   color: $dark-grey;
+  outline: none;
 
   &::placeholder {
     font-size: 13px;
@@ -141,7 +143,7 @@
   }
 
   &:focus {
-    border: 2px solid $green;
+    outline: 2px solid $green;
   }
 }
 
