--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -51,8 +51,10 @@
 .contacts__item-link {
   line-height: 1.3;
   color: #ffffff;
+
+  border-bottom: 1px solid transparent;
   text-decoration: none;
-  transition: border-bottom-color 0.3s ease-out;
+  transition: all ease-in-out 1s;
 
   &:hover {
     border-bottom: 1px solid #ffffff;
