--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -24,6 +24,10 @@
   .page-main--intro {
     background-size: 380px auto;
   }
+
+  .page-main--open {
+    margin-top: 58px;
+  }
 }
 
 @media (max-width: $tablet-width) {
