--- a/source/sass/blocks/scroll.scss
+++ b/source/sass/blocks/scroll.scss
@@ -15,7 +15,7 @@
 .scroll__link {
   position: relative;
 
-  display: flex;
+  display: inline-block;
   justify-content: center;
   padding-bottom: 3px;
 
