--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "scaffolding.scss";
 @import "vendor/normalize.scss";
 @import "vendor/swiper.scss";
+@import "vendor/accordion.scss";
 @import "blocks/button.scss";
 @import "blocks/page-header.scss";
 @import "blocks/intro.scss";
