--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -54,7 +54,7 @@
 
   border-bottom: 1px solid transparent;
   text-decoration: none;
-  transition: all ease-in-out 0.3s;
+  transition-duration: 0.3s;
 
   &:hover {
     border-bottom: 1px solid #ffffff;
