--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -7,7 +7,7 @@
   text-transform: uppercase;
   background-color: transparent;
   letter-spacing: 0.03em;
-  color: #ffffff;
+  color: $white;
   text-align: center;
 
   border: solid 2px $green;
