--- a/source/sass/blocks/explanation.scss
+++ b/source/sass/blocks/explanation.scss
@@ -121,7 +121,7 @@
     width: 40px;
     height: 40px;
 
-    background-color: #ffffff;
+    background-color: $white;
     border-radius: 50%;
     box-sizing: border-box;
     left: -8px;
