--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -7,7 +7,7 @@ body {
   padding: 0;
 
   font-family: "Ubuntu", "Arial", sans-serif;
-  color: #ffffff;
+  color: $white;
   font-style: normal;
   font-weight: 300;
   font-size: 15px;
