--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -25,7 +25,7 @@
 }
 
 .page-footer__link {
-  color: #ffffff;
+  color: $white;
   text-align: center;
   letter-spacing: 0.12em;
   font-size: 11px;
@@ -59,7 +59,7 @@
 }
 
 .page-footer__social-image {
-  fill: #ffffff;
+  fill: $white;
   opacity: 0.64;
   transition-duration: 0.3s;
 
@@ -104,7 +104,7 @@
   }
 
   .page-footer__social-image {
-    fill: #ffffff;
+    fill: $white;
     opacity: 0.64;
     transition-duration: 0.3s;
 
