--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -56,7 +56,7 @@
 }
 
 .page-header__logo-image {
-  fill: #ffffff;
+  fill: $white;
   transition-duration: 0.3s;
 
   &:hover {
@@ -68,7 +68,7 @@
   transition-duration: 0.3s;
 
   &:hover {
-    fill: #ffffff;
+    fill: $white;
   }
 }
 
@@ -76,7 +76,7 @@
   font-weight: 500;
   font-size: 15px;
   line-height: 1.4;
-  color: #ffffff;
+  color: $white;
   text-decoration: none;
   text-transform: uppercase;
 
@@ -282,7 +282,7 @@
   }
 
   .page-header__social-image {
-    fill: #ffffff;
+    fill: $white;
     opacity: 0.64;
   }
 
