--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -28,7 +28,7 @@
 .popup__form {
   width: 560px;
   min-height: 380px;
-  background-color: $white;
+  background-color: $light-bg;
 
   top: 194px;
   left: 50%;
@@ -201,7 +201,7 @@
     width: 100%;
     min-height: 100%;
     height: auto;
-    background-color: $white;
+    background-color: $light-bg;
 
     top: 0;
     left: 50%;
