--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -6,7 +6,7 @@
   font-size: 18px;
   line-height: 1.4;
 
-  color: #ffffff;
+  color: $white;
   opacity: 0.87;
 }
 
@@ -40,8 +40,8 @@
     width: 11px;
     height: 11px;
 
-    border-right: 1px solid #ffffff;
-    border-bottom: 1px solid #ffffff;
+    border-right: 1px solid $white;
+    border-bottom: 1px solid $white;
     top: 17px;
     left: 50%;
 
