--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -15,7 +15,7 @@
 
   cursor: pointer;
 
-  transition-duration: 0.3s;
+  transition: background-color $time $timing;
   outline: none;
 
   &:hover,
