--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -45,7 +45,7 @@
     top: 17px;
     left: 50%;
 
-    transition-duration: 0.3s;
+    transition: border-color $time $timing;
   }
 
   &:hover::before {
