--- a/source/sass/blocks/technology.scss
+++ b/source/sass/blocks/technology.scss
@@ -182,7 +182,7 @@
   z-index: 5;
 
   cursor: pointer;
-  transition-duration: 0.3s;
+  transition: background-color $time $timing;
 
   &:hover {
     background-color: $green;
@@ -304,7 +304,7 @@
     margin-left: auto;
   }
 
-  .technology__item-image-container:nth-child(1) {
+  .technology__item:nth-child(1) .technology__item-image-container {
     &::before {
       top: 122px;
       left: 43px;
@@ -316,7 +316,7 @@
     }
   }
 
-  .technology__item-image-container:nth-child(2) {
+  .technology__item:nth-child(2) .technology__item-image-container {
     &::before {
       top: 152px;
       left: 227px;
@@ -328,7 +328,7 @@
     }
   }
 
-  .technology__item-image-container:nth-child(3) {
+  .technology__item:nth-child(3) .technology__item-image-container {
     &::before {
       top: 106px;
       left: 232px;
@@ -340,7 +340,7 @@
     }
   }
 
-  .technology__item-image-container:nth-child(4) {
+  .technology__item:nth-child(4) .technology__item-image-container {
     &::before {
       top: 189px;
       left: 356px;
@@ -389,7 +389,7 @@
     left: 9px;
   }
 
-  .technology__item-image-container:nth-child(1) {
+  .technology__item:nth-child(1) .technology__item-image-container {
     &::before {
       top: 87px;
       left: 30px;
@@ -401,7 +401,7 @@
     }
   }
 
-  .technology__item-image-container:nth-child(2) {
+  .technology__item:nth-child(2) .technology__item-image-container {
     &::before {
       top: 109px;
       left: 165px;
@@ -413,7 +413,7 @@
     }
   }
 
-  .technology__item-image-container:nth-child(3) {
+  .technology__item:nth-child(3) .technology__item-image-container {
     &::before {
       top: 76px;
       left: 169px;
@@ -425,7 +425,7 @@
     }
   }
 
-  .technology__item-image-container:nth-child(4) {
+  .technology__item:nth-child(4) .technology__item-image-container {
     &::before {
       top: 130px;
       left: 257px;
