--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,9 @@ $tablet-width: 767px;
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 
+$time: 0.3s;
+$timing: ease-in-out;
+
 $green: #0dd1a2;
 $dark-green: #15b38d;
 $dark-grey: #1c1c1c;
