--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/page-header.scss";
 @import "blocks/intro.scss";
 @import "blocks/popup.scss";
+@import "blocks/form.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/product.scss";
 @import "blocks/explanation.scss";
