--- a/source/sass/blocks/form-field.scss
+++ b/source/sass/blocks/form-field.scss
@@ -18,20 +18,43 @@
   &:focus {
     outline: 2px solid $green;
   }
+}
 
-  &:focus:valid {
-    outline: 2px solid #1dc04b;
-    background-image: url("../img/correct.svg");
-    background-repeat: no-repeat;
-    background-size: 16px 13px;
-    background-position: top 17px right 17px;
-  }
+.form-field .valid {
+  border: 2px solid #1dc04b;
+  background-image: url("../img/correct.svg");
+  background-repeat: no-repeat;
+  background-size: 16px 13px;
+  background-position: top 17px right 17px;
 
-  &:focus:invalid {
-    outline: 2px solid #f97676;
-    background-image: url("../img/incorrect.svg");
-    background-repeat: no-repeat;
-    background-size: 12px 12px;
-    background-position: top 18px right 17px;
+  &:focus {
+    outline-color: #1dc04b;
   }
+}
+
+.form-field .invalid {
+  border: 2px solid #f97676;
+  background-image: url("../img/incorrect.svg");
+  background-repeat: no-repeat;
+  background-size: 12px 12px;
+  background-position: top 18px right 17px;
+
+  &:focus {
+    outline-color: #f97676;
+  }
+}
+
+.form-field__error {
+  display: none;
+  margin: 0;
+
+  color: #f97676;
+  font-size: 13px;
+  font-weight: 400;
+  text-align: center;
+  line-height: 1.3;
+}
+
+.form-field--invalid .form-field__error {
+  display: block;
 }
