--- a/source/sass/blocks/explanation.scss
+++ b/source/sass/blocks/explanation.scss
@@ -72,7 +72,7 @@
   }
 }
 
-.explanation__column-text:nth-child(3) {
+.explanation__item:nth-child(3) .explanation__column-text {
   position: relative;
 
   &::before {
@@ -171,7 +171,7 @@
   }
 }
 
-.explanation__column-text:nth-child(1) {
+.explanation__item:nth-child(1) .explanation__column-text {
   position: relative;
 
   &::before {
@@ -227,7 +227,7 @@
     padding-bottom: 10px;
   }
 
-  .explanation__column-text:nth-child(1) {
+  .explanation__item:nth-child(1) .explanation__column-text {
     &::before {
       top: 32px;
       left: 24%;
@@ -242,7 +242,7 @@
     }
   }
 
-  .explanation__column-text:nth-child(3) {
+  .explanation__item:nth-child(3) .explanation__column-text {
     &::before {
       width: 75%;
       height: 39px;
@@ -315,7 +315,7 @@
     padding-bottom: 2px;
   }
 
-  .explanation__column-text:nth-child(1)::before {
+  .explanation__item:nth-child(1) .explanation__column-text::before {
     display: none;
   }
 
@@ -325,7 +325,7 @@
     }
   }
 
-  .explanation__column-text:nth-child(3) {
+  .explanation__item:nth-child(3) .explanation__column-text {
     &::before {
       display: none;
     }
