--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -63,6 +63,8 @@
   background-color: $white;
   color: $dark-grey;
 
+  cursor: pointer;
+
   &::before {
     content: "";
     position: absolute;
