--- a/source/sass/blocks/form-field.scss
+++ b/source/sass/blocks/form-field.scss
@@ -2,11 +2,12 @@
   display: inline-block;
   border: none;
 
-  padding: 15px;
+  padding: 14px 15px;
   box-sizing: border-box;
 
   font-size: 15px;
   font-weight: 400;
+  line-height: 1.3;
   color: $dark-grey;
   outline: none;
 
