--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -26,6 +26,7 @@ body {
 
   @media (max-width: $tablet-width) {
     display: block;
+    background-attachment: scroll;
   }
 }
 
@@ -63,5 +64,6 @@ img {
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/body-background-main-2@1x.png"), url("../img/body-background-main@2x.jpg");
+    background-attachment: scroll;
   }
 }
