--- a/source/sass/blocks/form-field.scss
+++ b/source/sass/blocks/form-field.scss
@@ -21,7 +21,8 @@
   }
 }
 
-.form-field--valid input {
+.form-field--valid input,
+.form-field--valid textarea {
   border: 2px solid #1dc04b;
   background-image: url("../img/correct.svg");
   background-repeat: no-repeat;
@@ -33,7 +34,8 @@
   }
 }
 
-.form-field--invalid input {
+.form-field--invalid input,
+.form-field--invalid textarea {
   border: 2px solid #f97676;
   background-image: url("../img/incorrect.svg");
   background-repeat: no-repeat;
