--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -254,7 +254,7 @@
   .page-header--open {
     background-color: rgba(28, 28, 28, 0.95);
     height: 100%;
-    position: fixed;
+    position: absolute;
     width: 100%;
     z-index: 10;
     top: 0;
