--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -253,11 +253,16 @@
 
   .page-header--open {
     background-color: rgba(28, 28, 28, 0.95);
-    height: 100%;
     position: absolute;
     width: 100%;
+    height: 100%;
     z-index: 10;
     top: 0;
+    overflow: scroll;
+  }
+
+  .page-header__container {
+    min-height: 568px;
   }
 
   .page-header__link {
