--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -261,7 +261,7 @@
     overflow: scroll;
   }
 
-  .page-header__container {
+  .page-header--open .page-header__container {
     min-height: 568px;
   }
 
