--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
 
   width: 100%;
+  height: 100%;
   max-width: 1278px;
   margin: 0 auto;
 
@@ -14,6 +15,8 @@
 }
 
 .intro__main {
+  min-height: 322px;
+  height: 100%;
   margin-top: 11%;
   flex-grow: 1;
 }
@@ -120,7 +123,6 @@
   }
 
   .intro__main {
-    height: 100%;
     margin-top: 0;
   }
 
