--- a/source/sass/blocks/scroll.scss
+++ b/source/sass/blocks/scroll.scss
@@ -106,6 +106,11 @@
   }
 }
 
+.scroll--intro {
+  min-height: 60px;
+  box-sizing: border-box;
+}
+
 .scroll__social-link--fb {
   padding-top: 2px;
   padding-left: 9px;
