--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -54,6 +54,10 @@ img {
 .main-background {
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
+  align-items: center;
+  width: 100%;
+
   height: 100vh;
   overflow: auto;
   background-image: url("../img/body-background-main-2@1x.png"), url("../img/body-background-main@1x.jpg");
@@ -65,10 +69,5 @@ img {
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/body-background-main-2@1x.png"), url("../img/body-background-main@2x.jpg");
     background-attachment: scroll;
-  }
-
-  @media (max-width: $tablet-width) {
-    align-items: center;
-    width: 100%;
   }
 }
