--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -152,7 +152,7 @@
 
   .product__slider {
     width: 100%;
-    min-width: auto;
+    min-width: 0;
     max-width: 562px;
     margin-right: auto;
     margin-top: 50px;
