--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -255,7 +255,7 @@
     background-color: rgba(28, 28, 28, 0.95);
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 10;
     top: 0;
     overflow: scroll;
