--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,13 +5,17 @@
   max-width: 1278px;
   width: 100%;
   margin: 0 auto;
-  margin-top: 11%;
+  margin-top: 10px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   box-sizing: border-box;
 }
 
 .intro__wrapper {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   padding-right: 20px;
   padding-left: 77px;
 }
