--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -3,12 +3,25 @@
   color: $dark-grey;
 }
 
+.popup__form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
 .popup__wrapper {
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+
   background-color: rgba(27, 45, 55, 0.5);
   position: absolute;
   z-index: 1000;
@@ -30,16 +43,14 @@
   min-height: 380px;
   background-color: $light-bg;
 
-  top: 194px;
-  left: 50%;
-  transform: translateX(-50%);
   box-sizing: border-box;
   padding-top: 60px;
   padding-right: 79px;
   padding-bottom: 58px;
   padding-left: 81px;
 
-  position: absolute;
+  position: relative;
+  margin: auto;
 
   z-index: 1001;
 }
@@ -152,7 +163,11 @@
 }
 
 .popup--show {
-  display: block;
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
 
 .popup-modal {
